src/stylesheets/components/card.scss
/* ... */
.discord-usercard {
	user-select: none;

	margin: 1em 0;

	border-radius: 8px;
	position: relative;
	width: 550px;
	background: $accent-primary;

	* {
		margin: 0;
		padding: 0;
	}

	.usercard__header {
		padding: 20px;
		display: flex;
		align-items: center;

		.header__avatar {
			margin-right: 20px;

			width: 90px;
			height: 90px;

			border-radius: 50%;
			position: relative;

			flex-shrink: 0;

			background-clip: padding-box;
			background-color: none;
			background-position: 50%;
			background-size: 100%;
		}

		.header__info {
			flex: 1;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;

			.info__nameTag {
				vertical-align: middle;
				padding-right: 20px;

				line-height: 20px;
				-ms-flex-wrap: wrap;
				flex-wrap: wrap;
				display: -webkit-box;

				span.username {
					font-size: 18px;
					font-weight: 600;
					color: #fff;
				}

				span.discriminator {
					font-size: 14px;
					color: hsla(0, 0%, 100%, 0.6);
				}
			}

			.info__badges {
				margin-top: 8px;

				-webkit-box-orient: horizontal;
				-webkit-box-direction: normal;
				-ms-flex-direction: row;
				flex-direction: row;
				flex-wrap: nowrap;
				-webkit-box-pack: start;
				-ms-flex-pack: start;
				justify-content: flex-start;
				-webkit-box-align: stretch;
				-ms-flex-align: stretch;
				align-items: stretch;

				display: flex;

				.badge-wrapper {
					outline: 0;
					margin-right: 6px;

					.badge {
						background-repeat: no-repeat;
						background-size: contain;
						background-position: 50%;
						cursor: pointer;
						width: 24px;
						height: 24px;

						&_hypesquad {
							background-image: url("/images/badges/hypesquad.svg");
						}

						&_nitro {
							background-image: url("/images/badges/nitro.svg");
							width: 28px;
						}

						&_early {
							background-image: url("/images/badges/early.svg");
							width: 28px;
						}

						&_bravery {
							background-image: url("/images/badges/bravery.svg");
						}

						&_brilliance {
							background-image: url("/images/badges/brilliance.svg");
						}

						&_balance {
							background-image: url("/images/badges/balance.svg");
						}

						&_boost-lvl1 {
							background-image: url("/images/badges/boost-lvl1.svg");
						}

						&_boost-lvl2 {
							background-image: require("/images/badges/boost-lvl2.svg");
						}

						&_boost-lvl3 {
							background-image: require("/images/badges/boost-lvl3.svg");
						}

						&_boost-lvl4 {
							background-image: require("/images/badges/boost-lvl4.svg");
						}
					}
				}
			}
		}
	}

	.usercard__activity {
		background-color: rgba(0, 0, 0, 0.05);

		.activity__info {
			padding: 20px;

			.info__header {
				color: #fff;
				text-transform: uppercase;
				margin-bottom: 8px;
				line-height: 16px;
				font-size: 12px;
				font-weight: 800;
			}

			.info__game {
				display: flex;
				align-items: flex-start;

				.game__icon {
					position: relative;

					img.game {
						text-indent: -9999px;
						width: 90px;
						height: 90px;
						border-radius: 4px;
						display: block;
						-o-object-fit: cover;
						object-fit: cover;
						-webkit-user-drag: none;

						mask: url("../assets/images/mask.svg");
					}

					img.status-icon {
						width: 30px;
						height: 30px;
						border-radius: 50%;
						position: absolute;
						bottom: -4px;
						right: -4px;
						-webkit-user-drag: none;
					}
				}

				.game__content {
					flex: 1 1 auto;
					color: hsla(0, 0%, 100%, 0.8);
					margin-left: 20px;

					white-space: nowrap;
					text-overflow: ellipsis;
					overflow: hidden;

					font-size: 13px;
					line-height: 16px;

					font-weight: 400;

					.game__title {
						font-weight: 600;

						span {
							color: hsla(0, 0%, 100%, 0.8);
						}
					}

					.text-row {
						display: block;
						margin-bottom: 4px;
					}

					.game__st-line {
						color: hsla(0, 0%, 100%, 0.8);
					}

					.game__nd-line {
						color: hsla(0, 0%, 100%, 0.8);
					}
				}
			}
		}
	}
}

.credit-card {
	margin: 10px 5px;
	position: relative;
	width: 250px;
	height: 50px;
	border-radius: 6px;
	padding: 10px;
	background: rgb(41, 45, 51);
	display: flex;
	justify-content: space-between;
	align-items: center;

	transition: all 0.15s ease-in-out;
	user-select: none;

	&__user {
		flex: 0.9;
		overflow: hidden;

		h1,
		h2 {
			margin: 0;
			margin-left: 5px;
		}

		h1 {
			font-size: 1.1rem;
			color: #fff;
			font-weight: normal;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
			-webkit-box-orient: vertical;
			font-weight: 800;
		}

		h2 {
			white-space: nowrap;
			text-overflow: ellipsis;
			overflow: hidden;
			width: calc(98%);
			font-size: 14px;
			color: rgba(255, 255, 255, 0.7);
			font-weight: 700;
			display: inline-block;
			/* font-family: "Discord Font", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
		}
	}

	&__avatar {
		img {
			height: 40px;
			border-radius: 50%;
			margin-right: 5px;
		}

		span {
			z-index: 1;

			position: absolute;
			bottom: 14px;
			right: 14px;

			display: block;
			width: 9px;
			height: 9px;

			border: 2px solid #2c2f33;
			border-radius: 100%;

			&.online {
				background: #43b581;
			}

			&.dnd {
				background: rgb(240, 71, 71);
			}

			&.idle {
				background: rgb(250, 166, 26);
			}

			&.offline {
				background: rgb(116, 127, 141);
			}
		}
	}

	&:hover {
		transform: translateY(-6px);
		z-index: 6;
		box-shadow: 0 2px 74px 0 rgba(0, 0, 0, 0.5);
	}
}
/* ... */

